[package]
name = "nix-tree"
version = "0.1.0"
edition = "2024"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
description = "Interactive Nix dependency tree viewer"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"
bytesize = "2.3.1"
crossterm = "0.29"
indexmap = "2.12"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }

[dev-dependencies]
tempfile = "3.24"

[profile.release]
lto = true
codegen-units = 1
strip = true
